CHANGELOG

>>VERSION 17.6
+ Added full Ukrainian edition (lore, speech, names, quests: prod. DDPAT Knife Series)
+ Added full Turkish edition (lore, speech, names, quests: prod. Ness)

* Recoded all the flat biome system
* Reworked all the speechbank system
* Great texture update (armor sets, shields and banners: prod. Hummel009)

+ Added Jogos Nhai banner
+ Added new Hardhome
+ Added skirling pass as a hidden road in mountains
+ Added villages and houses for wildling, thenn and north hillmen
+ Added random corn plants spawning
+ Added random structures
+ Added Tugar Khan
+ Added Hojtbaatar waypoint
+ Added Jogos Nhai armor
+ Added Tugar Khan achievement
+ Added dark variants of scrap trader and thief

* Improved guards: sync between Essos and Westeros
* Improved Yi Ti Roads
* Improved almost all biomes
* Improved summer islands' strscans
* Improved white walkers attack AI
* Improved massy and cracklaw
* Improved forests and mountains
* Improved spawning
* Improved Bu Gai Quest
* Improved structures generator
* Improved wall gate

* Optimized iron bank code

* Fixed bug with Twins
* Fixed bug with crashing removed biomes
* Fixed bug with Yi Ti border
* Fixed bug with attack
* Fixed bug with village spawning
* Fixed bug with scorpion drop
* Fixed bug with iron bank
* Fixed bug with alchemist skin
* Fixed bug with speech and chat
* Fixed bug with structures of Mossovy
* Fixed bug with sandstone in Westeros
* Fixed bug with Daenerys Targaryen spawning
* Fixed bug with Yi Ti cities
* Fixed bug with valyrian smelting

- Removed Skirling pass as a biome
- Removed corn fields
- Removed Kitra's achievement
- Removed Kitra
- Removed Kitra's Camp waypoint
- Removed 28 technical biomes
- Removed camps and tents of wildling, thenn and north hillmen

>>VERSION 17.5
* Reworked Mossovy. Added table, new mobs, structures, villages and fixed genstructures.
* Reworked economics. New gold, silver and valyrian prices. New prices for all items made of these materials