@@ -8,6 +8,7 @@ CHANGELOG
 * Reworked all the speechbank system
 * Great texture update (armor sets, shields and banners: prod. Hummel009)
 
++ Added new Jogos Nhai units
 + Added Jogos Nhai banner
 + Added new Hardhome
 + Added skirling pass as a hidden road in mountains
